syntax = "proto3";

package avikom.assistance;

import "avikom/options/options.proto";
import "avikom/assistance/task_step.proto";
import "avikom/generic/key_value_pair.proto";

option csharp_namespace = "Avikom.Types.Assistance";
option go_package = "gitlab.ub.uni-bielefeld.de/avikom/go-types/avikom/assistance";
option java_package = "app.avikom.types.assistance";


/**
 * This message describes a specific Task which can include several task steps.
 * A task may be conducted in several locations (scenes). 
 * @author: Alexander Neumann <alneuman@techfak.uni-bielefeld.de>
 */
message Task {
    option (avikom.options.schema_definition) = true;
    
    string name = 1 [(avikom.options.schema).unique = true];       /// globally unique name of the task
    repeated TaskStep steps = 2;                                   /// steps assigned to this task; steps do not need to be exclusive to a task; steps do not need to be mentioned here to be triggered by tge BPM engine
    string summary = 3;                                            /// a brief description of the current task (roughly 1-3 sentences max).
    string description = 4;                                        /// a more detailled description of the task at hand
    string process = 5;                                            /// name of the BPM process that describes this task
    repeated avikom.generic.KeyValuePair process_parameters = 6;   /// variables passed to the process
}
